Resolve CSS architecture issues (#3)
* Move scrollbar attempt to the correct css architecture

* Add automated horizontal scrollbar to div ID mid

* Remove random hi.css file

The current elmastats architecture is randomly loading hi.css from the main PHP directory rather than the hi.css which is specifically located in the CSS directory. This is extremely confusing and I am fixing it.

* Address random hi.css file issue

The current elmastats architecture is randomly loading hi.css from the main PHP directory rather than the hi.css which is specifically located in the CSS directory. This is extremely confusing and I am fixing it.

* Actually load CSS from the CSS directory

The current elmastats architecture is randomly loading css from the main PHP directory rather than the css which is specifically located in the CSS directory. This is extremely confusing and I am fixing it.

* Remove base directory CSS files

CSS should now be loaded from the CSS directory as intended, rather than the directory serving as a red herring for developers

* Reinstate and comment the target-time-colour handling

--- a/css/Default.css
+++ b/css/Default.css
@@ -23,7 +23,7 @@ body {
 
 a.header {
   border: 1px solid #000000;
-  background-image: url("img/header.png");
+  background-image: url("../img/header.png");
 }
 
 #left {
@@ -45,8 +45,6 @@ table.times {
   border-style: solid;
   border-color: #000000;
   background-color: #303030;
-  max-width: 720px;
-  overflow-x: auto;
 }
 th.times {
   border-style: dotted;
